--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.0",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
